<resources>

    <string name="app_name">Typr</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_typr">Typr</string>
    <string name="menu_new">New</string>
    <string name="menu_open">Open</string>
    <string name="menu_save">Save</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_saveas">Save As</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Send</string>

</resources>