<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_new"
        android:title="@string/menu_new"
        android:icon="@drawable/menu_new"
        android:visible="true"
        android:showAsAction="ifRoom"></item>
    
    <item android:id="@+id/menu_open"
        android:title="@string/menu_open"
        android:icon="@drawable/menu_open"
        android:visible="true"
        android:showAsAction="ifRoom"></item>
    
    <item android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:visible="true"
        android:icon="@drawable/menu_save"
        android:showAsAction="ifRoom"></item>
    
    <item android:id="@+id/menu_tools"
        android:title="@string/menu_tools"
        android:visible="true"
        android:icon="@drawable/menu_tools"
        android:showAsAction="always"></item>
    
    <!--<item android:id="@+id/menu_share"
        android:title="@string/menu_share"
        android:showAsAction="collapseActionView"
        android:actionProviderClass="android.widget.ShareActionProvider" />-->
    
    <item android:id="@+id/menu_saveas"
        android:title="@string/menu_saveas"
        android:showAsAction="never"
        android:icon="@drawable/menu_save"/>
    
    <!--<item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/menu_settings"/>-->
</menu>
